--- a/front.html
+++ b/front.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
     <title>Top 10</title>
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Top 10</a>
+    <a class="navbar-brand" href="#"><img class="rounded-circle" src="images\master_1.png" alt="Circle image">Top 10</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -39,19 +39,25 @@
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <input class="form-control mr-sm-2" type="search" placeholder="Rechercher" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
       </form>
     </div>
 </nav>
+<!-- <div class="media">
+    <img src="images\master_1.png"class="d-flex mr-3" data-src="holder.js/64x64?theme=sky" alt="Generic placeholder image">
+    <div class="media-body text-white">
+      <h5 class="mt-0 text-white" >Master tft</h5>
+      Je suis passé master sur tft en octobre 2020.
+    </div>
+</div> -->
 
 <body>
-    <br>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
 
-    <div class="row row-cols-1 row-cols-md-4 mx-auto" style="max-width: 67%;">
+    <div class="row row-cols-1 row-cols-md-4 mx-auto mt-2" style="max-width: 67%;">
         <div class="col mb-4">
             <div class="card text-white bg-dark">
                 <img src="images\leagueoflegendstest (1).jpg" style="height: 350px;" class="card-img-top" alt="Lol">
@@ -119,8 +125,7 @@
                     <h5 class="card-title">World of Warcraft</h5>
                     <span class="badge badge-pill badge-light">MMO</span>
                     <p class="card-text">World of Warcraft est un jeu vidéo de type MMORPG développé par la société
-                        Blizzard Entertainment. C'est le 4ᵉ jeu de l'univers médiéval-fantastique Warcraft, introduit
-                        par Warcraft: Orcs and Humans en 1994.</p>
+                        Blizzard Entertainment. C'est le 4ᵉ jeu de l'univers médiéval-fantastique Warcraft</p>
                     <footer class="blockquote-footer">Blizzard<cite title="Source Title"></cite></footer>
                 </div>
             </div>
@@ -132,8 +137,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Genshin Impact</h5>
                     <span class="badge badge-pill badge-warning">Action-RPG</span>
-                    <p class="card-text">Genshin Impact est un jeu vidéo de type action-RPG développé par miHoYo. Le jeu
-                        est une adaptation des "gacha", qui subissent un gros boum sur téléphone.Le but du jeu est de
+                    <p class="card-text">Genshin Impact est un jeu vidéo de type action-RPG développé par miHoYo. Le but du jeu est de
                         collectionner des personnages et explorer le monde ouvert.</p>
                     <footer class="blockquote-footer">miHoYo<cite title="Source Title"></cite></footer>
                 </div>
@@ -145,7 +149,7 @@
                 <div class="card-body">
                     <h5 class="card-title"><a href="https://playvalorant.com/en-gb/">Valorant</a></h5>
                     <span class="badge badge-pill badge-primary">FPS</span>
-                    <p class="card-text">Valorant est un jeu vidéo free-to-play de tir à la première personne en multijoueur développé et édité par Riot Games,l'éditeur de League of legends, et sorti le 2 juin 2020.</p>
+                    <p class="card-text">Valorant est un jeu vidéo free-to-play de tir à la première personne en multijoueur développé et édité par Riot Games et sorti le 2 juin 2020.</p>
                     <footer class="blockquote-footer">Riot Games<cite title="Source Title"></cite></footer>
                 </div>
             </div>
@@ -157,7 +161,7 @@
                     <h5 class="card-title">Risk of rain 2</h5>
                     <span class="badge badge-pill badge-primary">FPS</span>
                     <a href="#Lol" class="badge badge-success">Rogue Like</a>
-                    <p class="card-text">Risk of Rain 2 est un jeu vidéo de tir à la troisième personne en 3D développé par le développeur indépendant Hopoo Games et édité par Gearbox Publishing. Offert en accès anticipé sur PC depuis mars 2019, une mise-à-jour vers la version 1.0 a eu lieu le 11 août 2020. Il fait suite à Risk of Rain.</p>
+                    <p class="card-text">Risk of Rain 2 est un jeu vidéo de tir à la troisième personne en 3D développé par le développeur indépendant Hopoo Games et édité par Gearbox Publishing.</p>
                     <footer class="blockquote-footer">Hopoo Games<cite title="Source Title"></cite></footer>
                 </div>
             </div>
@@ -168,7 +172,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Diablo 3</h5>
                     <a href="#" class="badge badge-danger">Hack and Slash</a>
-                    <p class="card-text">Diablo III est un jeu vidéo d'action et de rôle de type hack and slash développé par Blizzard Entertainment. Il constitue le troisième opus de la série, succédant à Diablo et à Diablo II. Publié par Activision Blizzard, le jeu a bénéficié d'une sortie mondiale le 15 mai 2012.</p>
+                    <p class="card-text">Diablo III est un jeu vidéo d'action et de rôle de type hack and slash développé par Blizzard. Le jeu a bénéficié d'une sortie mondiale le 15 mai 2012.</p>
                     <footer class="blockquote-footer">Blizzard<cite title="Source Title"></cite></footer>
                     
                 </div>
@@ -178,5 +182,4 @@
 
     </div>
 </body>
-
 </html>
