--- a/front.html
+++ b/front.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="shortcut icon" href="images\hiclipart.com.png">
     <title>Top 10</title>
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -51,6 +52,11 @@
       Je suis passé master sur tft en octobre 2020.
     </div>
 </div> -->
+<div class="d-flex justify-content-around">
+    <img src="images\kindred.png"class="d-flex mr-3" data-src="holder.js/64x64?theme=sky" alt="Generic placeholder image">
+    <div class="p-2">Testing sht</div>
+    <img src="images\kindred.png"class="d-flex mr-3" data-src="holder.js/64x64?theme=sky" alt="Generic placeholder image">
+  </div>
 
 <body>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
