--- a/front.html
+++ b/front.html
@@ -54,7 +54,7 @@
 </div> -->
 <div class="d-flex justify-content-around">
     <img src="images\kindred.png"class="d-flex mr-3" data-src="holder.js/64x64?theme=sky" alt="Generic placeholder image">
-    <div class="p-2">Testing sht</div>
+    <div class="p-2 align-self-center text-white"><p class="font-weight-bold display-4">Ce site est une liste de jeux sur lesquels j'ai passé beaucoup de temps et que j'ai beaucoup apprécié</p></div>
     <img src="images\kindred.png"class="d-flex mr-3" data-src="holder.js/64x64?theme=sky" alt="Generic placeholder image">
   </div>
 
