--- a/front.html
+++ b/front.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="shortcut icon" href="images\hiclipart.com.png">
+    <link rel="shortcut icon" href="/images/hiclipart.com.png">
     <title>Top 10</title>
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -49,24 +49,32 @@
     <img src="images\master_1.png"class="d-flex mr-3" data-src="holder.js/64x64?theme=sky" alt="Generic placeholder image">
     <div class="media-body text-white">
       <h5 class="mt-0 text-white" >Master tft</h5>
-      Je suis passé master sur tft en octobre 2020.
+      brouillon texte
     </div>
 </div> -->
-<div class="d-flex justify-content-around">
-    <img src="images\kindred.png"class="d-flex mr-3" data-src="holder.js/64x64?theme=sky" alt="Generic placeholder image">
-    <div class="p-2 align-self-center text-white"><p class="font-weight-bold display-4">Ce site est une liste de jeux sur lesquels j'ai passé beaucoup de temps et que j'ai beaucoup apprécié</p></div>
-    <img src="images\kindred.png"class="d-flex mr-3" data-src="holder.js/64x64?theme=sky" alt="Generic placeholder image">
-  </div>
+<div class="container-fluid col-lg-5 mx-auto my-2">
+    <div class="row">
+        <div>
+            <img class="mr-5 kindred" src="images\kindred.png" alt="kindred">
+        </div>
+        <div class="col-6">
+            <h1 class="h3">top 10 de mes jeux</h1>
+            <p class="text-justify" style="font-size: 0.9rem">
+                Ce site est une liste de jeux sur lesquels j'ai passé beaucoup de temps et que j'ai beaucoup apprécié</p>
+        </div>
+    </div>
+</div>
 
 <body>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
+    <!-- sm md lg xl  -->
 
-    <div class="row row-cols-1 row-cols-md-4 mx-auto mt-2" style="max-width: 67%;">
-        <div class="col mb-4">
+    <div class="container-fluid col-xl-9 mx-auto row">
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-4">
             <div class="card text-white bg-dark">
-                <img src="images\leagueoflegendstest (1).jpg" style="height: 350px;" class="card-img-top" alt="Lol">
+                <img src="images\leagueoflegendstest (1).jpg" class="card-img-top" alt="Lol">
                 <div class="card-body">
                     <h5 class="card-title">League of legends</h5>
                     <a href="#" class="badge badge-info">MOBA</a>
@@ -76,9 +84,9 @@
                 </div>
             </div>
         </div>
-        <div class="col mb-4">
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-4">
             <div class="card text-white bg-dark">
-                <img src="images\TBDOI.jpg" style="height: 350px;" class="card-img-top" alt="tbi">
+                <img src="images\TBDOI.jpg" class="card-img-top" alt="tbi">
                 <div class="card-body">
                     <h5 class="card-title">The binding of Isaac</h5>
                     <a href="#" class="badge badge-success">Rogue Like</a>
@@ -88,9 +96,9 @@
                 </div>
             </div>
         </div>
-        <div class="col mb-4">
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-4">
             <div class="card text-white bg-dark">
-                <img src="images\tft (1).jpg" style="height: 350px;" class="card-img-top" alt="tft">
+                <img src="images\tft (1).jpg" class="card-img-top" alt="tft">
                 <div class="card-body">
                     <h5 class="card-title">Teamfight Tactics</h5>
                     <span class="badge badge-pill badge-secondary">AutoChess</span>
@@ -100,21 +108,21 @@
                 </div>
             </div>
         </div>
-        <div class="col mb-4">
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-4">
             <div class="card text-white bg-dark">
-                <img src="images\hades (1).png" style="height: 350px;" class="card-img-top" alt="hades">
+                <img src="images\hades (1).png" class="card-img-top" alt="hades">
                 <div class="card-body">
                     <h5 class="card-title">Hadès</h5>
                     <a href="#" class="badge badge-success">Rogue Like</a>
                     <p class="card-text">Hades est un rogue-like en mode dungeon crawler qui associe le meilleur des
-                        titres de Supergiant Games salués par la critique, il est sorti le 17 septembre 2020.</p>
+                        titres de Supergiant Games salués par la critique.</p>
                     <footer class="blockquote-footer">Supergiant Games<cite title="Source Title"></cite></footer>
                 </div>
             </div>
         </div>
-        <div class="col mb-4">
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-4">
             <div class="card text-white bg-dark">
-                <img src="images\dofus-aTLTcV (1).jpg" style="height: 350px;" class="card-img-top" alt="dofus">
+                <img src="images\dofus-aTLTcV (1).jpg" class="card-img-top" alt="dofus">
                 <div class="card-body">
                     <h5 class="card-title">Dofus</h5>
                     <span class="badge badge-pill badge-light">MMO</span>
@@ -124,9 +132,9 @@
                 </div>
             </div>
         </div>
-        <div class="col mb-4">
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-4">
             <div class="card text-white bg-dark">
-                <img src="images\Wow.jpg" style="height: 350px;" class="card-img-top" alt="wow">
+                <img src="images\Wow.jpg" class="card-img-top" alt="wow">
                 <div class="card-body">
                     <h5 class="card-title">World of Warcraft</h5>
                     <span class="badge badge-pill badge-light">MMO</span>
@@ -136,9 +144,9 @@
                 </div>
             </div>
         </div>
-        <div class="col mb-4">
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-4">
             <div class="card text-white bg-dark">
-                <img src="images\genshin-impact-cover (1).jpg" style="height: 350px;" class="card-img-top"
+                <img src="images\genshin-impact-cover (1).jpg" class="card-img-top"
                     alt="genshin">
                 <div class="card-body">
                     <h5 class="card-title">Genshin Impact</h5>
@@ -149,9 +157,9 @@
                 </div>
             </div>
         </div>
-        <div class="col mb-4">
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-4">
             <div class="card text-white bg-dark">
-                <img src="images\valolo (1).jpg" style="height: 350px;" class="card-img-top" alt="valorant">
+                <img src="images\valolo (1).jpg" class="card-img-top" alt="valorant">
                 <div class="card-body">
                     <h5 class="card-title"><a href="https://playvalorant.com/en-gb/">Valorant</a></h5>
                     <span class="badge badge-pill badge-primary">FPS</span>
@@ -160,9 +168,9 @@
                 </div>
             </div>
         </div>
-        <div class="col mb-4">
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-4">
             <div class="card text-white bg-dark">
-                <img src="images\risk-of-rain-2-cover.jpg" style="height: 350px;" class="card-img-top" alt="Lol">
+                <img src="images\risk-of-rain-2-cover.jpg" class="card-img-top" alt="Lol">
                 <div class="card-body">
                     <h5 class="card-title">Risk of rain 2</h5>
                     <span class="badge badge-pill badge-primary">FPS</span>
@@ -172,9 +180,9 @@
                 </div>
             </div>
         </div>
-        <div class="col mb-4">
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-4">
             <div class="card text-white bg-dark">
-                <img src="images\diablo3.jpg" style="height: 350px;" class="card-img-top" alt="Lol">
+                <img src="images\diablo3.jpg" class="card-img-top" alt="Lol">
                 <div class="card-body">
                     <h5 class="card-title">Diablo 3</h5>
                     <a href="#" class="badge badge-danger">Hack and Slash</a>
