--- a/front.html
+++ b/front.html
@@ -76,7 +76,7 @@
             <div class="card text-white bg-dark">
                 <img src="images\leagueoflegendstest (1).jpg" class="card-img-top" alt="Lol">
                 <div class="card-body">
-                    <h5 class="card-title">League of legends</h5>
+                    <h5 class="card-title"><a href="https://play.euw.leagueoflegends.com/fr_FR">League of legends</a></h5>
                     <a href="#" class="badge badge-info">MOBA</a>
                     <p class="card-text">League of legends est certainement le MOBA le plus connu au monde, le jeu est
                         sorti le 27 Octobre 2009 et reste dans les jeux les plus joués au monde.</p>
@@ -88,7 +88,7 @@
             <div class="card text-white bg-dark">
                 <img src="images\TBDOI.jpg" class="card-img-top" alt="tbi">
                 <div class="card-body">
-                    <h5 class="card-title">The binding of Isaac</h5>
+                    <h5 class="card-title"><a href="https://store.steampowered.com/app/113200/The_Binding_of_Isaac/">The binding of Isaac</a></h5>
                     <a href="#" class="badge badge-success">Rogue Like</a>
                     <p class="card-text">The binding of Isaac est certainement le roguelike le plus connu de par sa
                         durée de vie, ses presques 1 000 succès et tous ses dlc.</p>
@@ -100,7 +100,7 @@
             <div class="card text-white bg-dark">
                 <img src="images\tft (1).jpg" class="card-img-top" alt="tft">
                 <div class="card-body">
-                    <h5 class="card-title">Teamfight Tactics</h5>
+                    <h5 class="card-title"><a href="https://teamfighttactics.leagueoflegends.com/fr-fr/">Teamfight Tactics</a></h5>
                     <span class="badge badge-pill badge-secondary">AutoChess</span>
                     <p class="card-text">TeamFight Tactics ou également appelé TFT est un autochess créé par Riot Games,
                         les créateurs de League of legends, et sorti en été 2019.</p>
@@ -112,7 +112,7 @@
             <div class="card text-white bg-dark">
                 <img src="images\hades (1).png" class="card-img-top" alt="hades">
                 <div class="card-body">
-                    <h5 class="card-title">Hadès</h5>
+                    <h5 class="card-title"><a href="https://store.steampowered.com/app/1145360/Hades/?l=french">Hadès</a></h5>
                     <a href="#" class="badge badge-success">Rogue Like</a>
                     <p class="card-text">Hades est un rogue-like en mode dungeon crawler qui associe le meilleur des
                         titres de Supergiant Games salués par la critique.</p>
@@ -124,7 +124,7 @@
             <div class="card text-white bg-dark">
                 <img src="images\dofus-aTLTcV (1).jpg" class="card-img-top" alt="dofus">
                 <div class="card-body">
-                    <h5 class="card-title">Dofus</h5>
+                    <h5 class="card-title"><a href="https://www.dofus.com/fr/prehome">Dofus</a></h5>
                     <span class="badge badge-pill badge-light">MMO</span>
                     <p class="card-text">Dofus est un jeu de rôle en ligne massivement multijoueur français développé et
                         édité par Ankama puis par sa filiale Ankama Games dès sa création en 2004.</p>
@@ -136,7 +136,7 @@
             <div class="card text-white bg-dark">
                 <img src="images\Wow.jpg" class="card-img-top" alt="wow">
                 <div class="card-body">
-                    <h5 class="card-title">World of Warcraft</h5>
+                    <h5 class="card-title"><a href="https://worldofwarcraft.com/fr-fr/">World of Warcraft</a></h5>
                     <span class="badge badge-pill badge-light">MMO</span>
                     <p class="card-text">World of Warcraft est un jeu vidéo de type MMORPG développé par la société
                         Blizzard Entertainment. C'est le 4ᵉ jeu de l'univers médiéval-fantastique Warcraft</p>
@@ -149,7 +149,7 @@
                 <img src="images\genshin-impact-cover (1).jpg" class="card-img-top"
                     alt="genshin">
                 <div class="card-body">
-                    <h5 class="card-title">Genshin Impact</h5>
+                    <h5 class="card-title"><a href="https://genshin.mihoyo.com/en">Genshin Impact</a></h5>
                     <span class="badge badge-pill badge-warning">Action-RPG</span>
                     <p class="card-text">Genshin Impact est un jeu vidéo de type action-RPG développé par miHoYo. Le but du jeu est de
                         collectionner des personnages et explorer le monde ouvert.</p>
@@ -159,7 +159,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-4">
             <div class="card text-white bg-dark">
-                <img src="images\valolo (1).jpg" class="card-img-top" alt="valorant">
+                <img src="/images/testvalo.webp" class="card-img-top" alt="valorant">
                 <div class="card-body">
                     <h5 class="card-title"><a href="https://playvalorant.com/en-gb/">Valorant</a></h5>
                     <span class="badge badge-pill badge-primary">FPS</span>
@@ -172,7 +172,7 @@
             <div class="card text-white bg-dark">
                 <img src="images\risk-of-rain-2-cover.jpg" class="card-img-top" alt="Lol">
                 <div class="card-body">
-                    <h5 class="card-title">Risk of rain 2</h5>
+                    <h5 class="card-title"><a href="https://store.steampowered.com/app/632360/Risk_of_Rain_2/">Risk of rain 2</a></h5>
                     <span class="badge badge-pill badge-primary">FPS</span>
                     <a href="#Lol" class="badge badge-success">Rogue Like</a>
                     <p class="card-text">Risk of Rain 2 est un jeu vidéo de tir à la troisième personne en 3D développé par le développeur indépendant Hopoo Games et édité par Gearbox Publishing.</p>
@@ -184,7 +184,7 @@
             <div class="card text-white bg-dark">
                 <img src="images\diablo3.jpg" class="card-img-top" alt="Lol">
                 <div class="card-body">
-                    <h5 class="card-title">Diablo 3</h5>
+                    <h5 class="card-title"><a href="https://eu.diablo3.com/fr-fr/">Diablo 3</a></h5>
                     <a href="#" class="badge badge-danger">Hack and Slash</a>
                     <p class="card-text">Diablo III est un jeu vidéo d'action et de rôle de type hack and slash développé par Blizzard. Le jeu a bénéficié d'une sortie mondiale le 15 mai 2012.</p>
                     <footer class="blockquote-footer">Blizzard<cite title="Source Title"></cite></footer>
