--- a/index.html
+++ b/index.html
@@ -192,8 +192,30 @@
                 </div>
             </div>
         </div>
-
-
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-4">
+            <div class="card text-white bg-dark">
+                <img src="images\zelda.jpg" class="card-img-top" alt="Lol">
+                <div class="card-body">
+                    <h5 class="card-title"><a href="https://www.nintendo.be/fr/Jeux/Wii-U/The-Legend-of-Zelda-Twilight-Princess-HD-1082222.html">Zelda : Twilight Princess</a></h5>
+                    <span class="badge badge-dark">Action-aventure</span>
+                    <p class="card-text">The Legend of Zelda: Twilight Princess est un jeu vidéo d'action-aventure développé par Nintendo EAD et édité par Nintendo, sorti sur GameCube et Wii en 2006.</p>
+                    <footer class="blockquote-footer">Blizzard<cite title="Source Title"></cite></footer>
+                    
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-4">
+            <div class="card text-white bg-dark">
+                <img src="images\temtem.jpg" class="card-img-top" alt="Lol">
+                <div class="card-body">
+                    <h5 class="card-title"><a href="https://store.steampowered.com/app/745920/Temtem/">Temtem</a></h5>
+                    <span class="badge badge-dark">Action-aventure</span>
+                    <p class="card-text">Temtem est un jeu de rôle en ligne MMO développé par le studio espagnol Crema et édité par Humble Bundle. Le jeu est sorti en accès anticipé via Steam le 21 janvier 2020</p>
+                    <footer class="blockquote-footer">Blizzard<cite title="Source Title"></cite></footer>
+                    
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
