--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 <img src="images\temtem.jpg" class="card-img-top" alt="Lol">
                 <div class="card-body">
                     <h5 class="card-title"><a href="https://store.steampowered.com/app/745920/Temtem/">Temtem</a></h5>
-                    <span class="badge badge-dark">Action-aventure</span>
+                    <span class="badge badge-pill badge-light">MMO</span>
                     <p class="card-text">Temtem est un jeu de rôle en ligne MMO développé par le studio espagnol Crema et édité par Humble Bundle. Le jeu est sorti en accès anticipé via Steam le 21 janvier 2020</p>
                     <footer class="blockquote-footer">Blizzard<cite title="Source Title"></cite></footer>
                     
