--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <h5 class="card-title"><a href="https://www.nintendo.be/fr/Jeux/Wii-U/The-Legend-of-Zelda-Twilight-Princess-HD-1082222.html">Zelda : Twilight Princess</a></h5>
                     <span class="badge badge-dark">Action-aventure</span>
                     <p class="card-text">The Legend of Zelda: Twilight Princess est un jeu vidéo d'action-aventure développé par Nintendo EAD et édité par Nintendo, sorti sur GameCube et Wii en 2006.</p>
-                    <footer class="blockquote-footer">Blizzard<cite title="Source Title"></cite></footer>
+                    <footer class="blockquote-footer">Nintendo<cite title="Source Title"></cite></footer>
                     
                 </div>
             </div>
@@ -211,7 +211,7 @@
                     <h5 class="card-title"><a href="https://store.steampowered.com/app/745920/Temtem/">Temtem</a></h5>
                     <span class="badge badge-pill badge-light">MMO</span>
                     <p class="card-text">Temtem est un jeu de rôle en ligne MMO développé par le studio espagnol Crema et édité par Humble Bundle. Le jeu est sorti en accès anticipé via Steam le 21 janvier 2020</p>
-                    <footer class="blockquote-footer">Blizzard<cite title="Source Title"></cite></footer>
+                    <footer class="blockquote-footer">Crema et Humble Bundle<cite title="Source Title"></cite></footer>
                     
                 </div>
             </div>
