--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-4">
             <div class="card text-white bg-dark">
-                <img src="/images/testvalo.webp" class="card-img-top" alt="valorant">
+                <img src="images/testvalo.webp" class="card-img-top" alt="valorant">
                 <div class="card-body">
                     <h5 class="card-title"><a href="https://playvalorant.com/en-gb/">Valorant</a></h5>
                     <span class="badge badge-pill badge-primary">FPS</span>
