--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="shortcut icon" href="images/hiclipart.com (2).png"/>
-    <title>Top 10.</title>
+    <title>Top 10</title>
 </head>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#"><img class="rounded-circle" src="images\master_1.png" alt="Circle image">Top 10</a>
@@ -48,7 +48,7 @@
 <!-- <div class="media">
     <img src="images\master_1.png"class="d-flex mr-3" data-src="holder.js/64x64?theme=sky" alt="Generic placeholder image">
     <div class="media-body text-white">
-      <h5 class="mt-0 text-white" >Master tft</h5>
+      <h5 class="mt-0 text-white" >Master tft.</h5>
       brouillon texte
     </div>
 </div> -->
@@ -76,7 +76,7 @@
             <div class="card text-white bg-dark">
                 <img src="images\leagueoflegendstest (1).jpg" class="card-img-top" alt="Lol">
                 <div class="card-body">
-                    <h5 class="card-title"><a href="https://play.euw.leagueoflegends.com/fr_FR">League of legends</a></h5>
+                    <h5 class="card-title"><a href="https://play.euw.leagueoflegends.com/fr_FR" target="_blank">League of legends</a></h5>
                     <a href="#" class="badge badge-info">MOBA</a>
                     <p class="card-text">League of legends est certainement le MOBA le plus connu au monde, le jeu est
                         sorti le 27 Octobre 2009 et reste dans les jeux les plus joués au monde.</p>
@@ -88,7 +88,7 @@
             <div class="card text-white bg-dark">
                 <img src="images\TBDOI.jpg" class="card-img-top" alt="tbi">
                 <div class="card-body">
-                    <h5 class="card-title"><a href="https://store.steampowered.com/app/113200/The_Binding_of_Isaac/">The binding of Isaac</a></h5>
+                    <h5 class="card-title"><a href="https://store.steampowered.com/app/113200/The_Binding_of_Isaac/" target="_blank">The binding of Isaac</a></h5>
                     <a href="#" class="badge badge-success">Rogue Like</a>
                     <p class="card-text">The binding of Isaac est certainement le roguelike le plus connu de par sa
                         durée de vie, ses presques 1 000 succès et tous ses dlc.</p>
@@ -100,7 +100,7 @@
             <div class="card text-white bg-dark">
                 <img src="images\tft (1).jpg" class="card-img-top" alt="tft">
                 <div class="card-body">
-                    <h5 class="card-title"><a href="https://teamfighttactics.leagueoflegends.com/fr-fr/">Teamfight Tactics</a></h5>
+                    <h5 class="card-title"><a href="https://teamfighttactics.leagueoflegends.com/fr-fr/" target="_blank">Teamfight Tactics</a></h5>
                     <span class="badge badge-pill badge-secondary">AutoChess</span>
                     <p class="card-text">TeamFight Tactics ou également appelé TFT est un autochess créé par Riot Games,
                         les créateurs de League of legends, et sorti en été 2019.</p>
@@ -112,7 +112,7 @@
             <div class="card text-white bg-dark">
                 <img src="images\hades (1).png" class="card-img-top" alt="hades">
                 <div class="card-body">
-                    <h5 class="card-title"><a href="https://store.steampowered.com/app/1145360/Hades/?l=french">Hadès</a></h5>
+                    <h5 class="card-title"><a href="https://store.steampowered.com/app/1145360/Hades/?l=french" target="_blank">Hadès</a></h5>
                     <a href="#" class="badge badge-success">Rogue Like</a>
                     <p class="card-text">Hades est un rogue-like en mode dungeon crawler qui associe le meilleur des
                         titres de Supergiant Games salués par la critique.</p>
@@ -124,7 +124,7 @@
             <div class="card text-white bg-dark">
                 <img src="images\dofus-aTLTcV (1).jpg" class="card-img-top" alt="dofus">
                 <div class="card-body">
-                    <h5 class="card-title"><a href="https://www.dofus.com/fr/prehome">Dofus</a></h5>
+                    <h5 class="card-title"><a href="https://www.dofus.com/fr/prehome" target="_blank">Dofus</a></h5>
                     <span class="badge badge-pill badge-light">MMO</span>
                     <p class="card-text">Dofus est un jeu de rôle en ligne massivement multijoueur français développé et
                         édité par Ankama puis par sa filiale Ankama Games dès sa création en 2004.</p>
@@ -136,7 +136,7 @@
             <div class="card text-white bg-dark">
                 <img src="images\Wow.jpg" class="card-img-top" alt="wow">
                 <div class="card-body">
-                    <h5 class="card-title"><a href="https://worldofwarcraft.com/fr-fr/">World of Warcraft</a></h5>
+                    <h5 class="card-title"><a href="https://worldofwarcraft.com/fr-fr/" target="_blank">World of Warcraft</a></h5>
                     <span class="badge badge-pill badge-light">MMO</span>
                     <p class="card-text">World of Warcraft est un jeu vidéo de type MMORPG développé par la société
                         Blizzard Entertainment. C'est le 4ᵉ jeu de l'univers médiéval-fantastique Warcraft</p>
@@ -149,7 +149,7 @@
                 <img src="images\genshin-impact-cover (1).jpg" class="card-img-top"
                     alt="genshin">
                 <div class="card-body">
-                    <h5 class="card-title"><a href="https://genshin.mihoyo.com/en">Genshin Impact</a></h5>
+                    <h5 class="card-title"><a href="https://genshin.mihoyo.com/en" target="_blank">Genshin Impact</a></h5>
                     <span class="badge badge-pill badge-warning">Action-RPG</span>
                     <p class="card-text">Genshin Impact est un jeu vidéo de type action-RPG développé par miHoYo. Le but du jeu est de
                         collectionner des personnages et explorer le monde ouvert.</p>
@@ -161,7 +161,7 @@
             <div class="card text-white bg-dark">
                 <img src="images/testvalo.webp" class="card-img-top" alt="valorant">
                 <div class="card-body">
-                    <h5 class="card-title"><a href="https://playvalorant.com/en-gb/">Valorant</a></h5>
+                    <h5 class="card-title"><a href="https://playvalorant.com/en-gb/" target="_blank">Valorant</a></h5>
                     <span class="badge badge-pill badge-primary">FPS</span>
                     <p class="card-text">Valorant est un jeu vidéo free-to-play de tir à la première personne en multijoueur développé et édité par Riot Games et sorti le 2 juin 2020.</p>
                     <footer class="blockquote-footer">Riot Games<cite title="Source Title"></cite></footer>
@@ -172,7 +172,7 @@
             <div class="card text-white bg-dark">
                 <img src="images\risk-of-rain-2-cover.jpg" class="card-img-top" alt="Lol">
                 <div class="card-body">
-                    <h5 class="card-title"><a href="https://store.steampowered.com/app/632360/Risk_of_Rain_2/">Risk of rain 2</a></h5>
+                    <h5 class="card-title"><a href="https://store.steampowered.com/app/632360/Risk_of_Rain_2/" target="_blank">Risk of rain 2</a></h5>
                     <span class="badge badge-pill badge-primary">FPS</span>
                     <a href="#Lol" class="badge badge-success">Rogue Like</a>
                     <p class="card-text">Risk of Rain 2 est un jeu vidéo de tir à la troisième personne en 3D développé par le développeur indépendant Hopoo Games et édité par Gearbox Publishing.</p>
@@ -184,7 +184,7 @@
             <div class="card text-white bg-dark">
                 <img src="images\diablo3.jpg" class="card-img-top" alt="Lol">
                 <div class="card-body">
-                    <h5 class="card-title"><a href="https://eu.diablo3.com/fr-fr/">Diablo 3</a></h5>
+                    <h5 class="card-title"><a href="https://eu.diablo3.com/fr-fr/" target="_blank">Diablo 3</a></h5>
                     <a href="#" class="badge badge-danger">Hack and Slash</a>
                     <p class="card-text">Diablo III est un jeu vidéo d'action et de rôle de type hack and slash développé par Blizzard. Le jeu a bénéficié d'une sortie mondiale le 15 mai 2012.</p>
                     <footer class="blockquote-footer">Blizzard<cite title="Source Title"></cite></footer>
@@ -196,7 +196,7 @@
             <div class="card text-white bg-dark">
                 <img src="images\zelda.jpg" class="card-img-top" alt="Lol">
                 <div class="card-body">
-                    <h5 class="card-title"><a href="https://www.nintendo.be/fr/Jeux/Wii-U/The-Legend-of-Zelda-Twilight-Princess-HD-1082222.html">Zelda : Twilight Princess</a></h5>
+                    <h5 class="card-title"><a href="https://www.nintendo.be/fr/Jeux/Wii-U/The-Legend-of-Zelda-Twilight-Princess-HD-1082222.html" target="_blank">Zelda : Twilight Princess</a></h5>
                     <span class="badge badge-dark">Action-aventure</span>
                     <p class="card-text">The Legend of Zelda: Twilight Princess est un jeu vidéo d'action-aventure développé par Nintendo EAD et édité par Nintendo, sorti sur GameCube et Wii en 2006.</p>
                     <footer class="blockquote-footer">Nintendo<cite title="Source Title"></cite></footer>
@@ -208,7 +208,7 @@
             <div class="card text-white bg-dark">
                 <img src="images\temtem.jpg" class="card-img-top" alt="Lol">
                 <div class="card-body">
-                    <h5 class="card-title"><a href="https://store.steampowered.com/app/745920/Temtem/">Temtem</a></h5>
+                    <h5 class="card-title"><a href="https://store.steampowered.com/app/745920/Temtem/" target="_blank">Temtem</a></h5>
                     <span class="badge badge-pill badge-light">MMO</span>
                     <p class="card-text">Temtem est un jeu de rôle en ligne MMO développé par le studio espagnol Crema et édité par Humble Bundle. Le jeu est sorti en accès anticipé via Steam le 21 janvier 2020</p>
                     <footer class="blockquote-footer">Crema et Humble Bundle<cite title="Source Title"></cite></footer>
