--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <!-- <div class="media">
     <img src="images\master_1.png"class="d-flex mr-3" data-src="holder.js/64x64?theme=sky" alt="Generic placeholder image">
     <div class="media-body text-white">
-      <h5 class="mt-0 text-white" >Master tft</h5>
+      <h5 class="mt-0 text-white" >Master AAAtft</h5>
       brouillon texte
     </div>
 </div> -->
