--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     </script>
     <!-- sm md lg xl  -->
 
-     <!-- <div class="supp container-fluid col-xl-9 mx-auto row">
-        <div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-4">
+      <div class="supp container-fluid col-xl-9 mx-auto row">
+    <!--<div class="col-12 col-sm-6 col-md-4 col-xl-3 mb-4">
             <div class="card text-white bg-dark">
                 <img src="images\leagueoflegendstest (1).jpg" class="card-img-top" alt="Lol">
                 <div class="card-body">
